ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chainwatch-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /chainwatch(/|$)(.*)
          backend:
            serviceName: chainwatch-api-service
            servicePort: 8080
